WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
311381
[Site Isolation] Fix provisional-load-cancels-previous-load.html layout test
https://bugs.webkit.org/show_bug.cgi?id=311381
Summary
[Site Isolation] Fix provisional-load-cancels-previous-load.html layout test
Qianlang Chen
Reported
2026-04-02 18:02:34 PDT
Fix this test to add test coverage for site isolation
Attachments
Add attachment
proposed patch, testcase, etc.
Qianlang Chen
Comment 1
2026-04-03 15:55:38 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/62004
EWS
Comment 2
2026-04-08 18:28:10 PDT
Committed
310813@main
(a46910834aed): <
https://commits.webkit.org/310813@main
> Reviewed commits have been landed. Closing PR #62004 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2026-04-08 18:29:13 PDT
<
rdar://problem/174369507
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug